--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mitt": "^3.0.1",
+    "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "daisyui": "^4.12.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
