--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "daisyui": "^4.12.10",
